--- a/miniproject.css
+++ b/miniproject.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #434747;
+    background-color: #444949;
 }
 
 .container {
@@ -14,27 +14,157 @@ body{
     padding: 10%;
     margin: 50px;
 }
-.container input{
-    margin: 30px;
-    padding: 5px;
-    font-size: 16px;
-    font-weight: bold;
-    border-color: aliceblue;
-    border-radius: 10px;
-    outline: none;
 
-}
+/* --------------Input container------------*/
+.input-container {
+    display: flex;
+    position: relative;
+    margin: 40px;
+  }
+  
+  /* Input field */
+  .input-field {
+    display: block;
+    width: 200px;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-bottom: 2px solid #ccc;
+    outline: none;
+    background-color: transparent;
+  }
+  
+  /* Input label */
+  .input-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    color: rgba(204, 204, 204, 0);
+    pointer-events: none;
+    transition: all 0.3s ease;
+  }
+  
+  /* Input highlight */
+  .input-highlight {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 0;
+    background-color: #e7ae10;
+    transition: all 0.3s ease;
+  }
+  
+  /* Input field:focus styles */
+  .input-field:focus + .input-label {
+    top: -20px;
+    font-size: 16px;
+    color: #ccee0f;
+  }
+  
+  .input-field:focus + .input-label + .input-highlight {
+    width: 200px;
+  }
+     /*--------input required----------*/
+  input:required:invalid::after {
+    content: "This field is required";
+    color: red;
+  }
+
+  /* -----------header -----------*/
 .container h1{
     text-transform: capitalize;
     color: rgb(243, 243, 248);
 }
 
+/* ----------select-------- */
 .container select {
-    padding: 5px;
+    position: relative;
+    left: 30%;
+    bottom: 93px;
+    background: transparent;
+    padding: 7px;
+    margin: 20px;
     outline: none;
     border-radius: 10px;
     font-size: 16px;
     font-weight: bold;
-    border-color: aliceblue;
+    border: 1px solid rgb(61, 106, 255);
     width: 200px;
 }
+
+button {
+    width: 400px;
+    position: relative;
+    padding: 10px 20px;
+    margin-left: 60px;
+    border-radius: 7px;
+    border: 1px solid rgb(61, 106, 255);
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+  }
+  
+  button:hover {
+    background: rgb(61, 106, 255);
+    box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+  }
+  
+  button:hover::before {
+    -webkit-animation: sh02 0.5s 0s linear;
+    -moz-animation: sh02 0.5s 0s linear;
+    animation: sh02 0.5s 0s linear;
+  }
+  
+  button::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+    background: #fff;
+    box-shadow: 0 0 50px 30px #fff;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+  }
+  
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+  
+  button:active {
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
+  }
